<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        android:padding="@dimen/normal_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_space"
            android:layout_marginTop="@dimen/normal_space"
            android:background="@drawable/login_input_background"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/normal_space"
                android:gravity="center_vertical"
                android:hint="@string/input_username"
                android:maxLines="1"
                android:paddingTop="@dimen/normal_space"
                android:paddingBottom="@dimen/normal_space"
                android:paddingStart="@dimen/normal_space"
                android:paddingEnd="@dimen/normal_space"
                android:textColor="@color/white"
                android:textColorHint="@color/transparentWhite"
                android:textSize="@dimen/normal_text_size"
                android:textCursorDrawable="@drawable/mycursor"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/normal_space"
                android:gravity="center_vertical"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="@dimen/normal_space"
                android:paddingBottom="@dimen/normal_space"
                android:paddingStart="@dimen/normal_space"
                android:paddingEnd="@dimen/normal_space"
                android:textColor="@color/white"
                android:textColorHint="@color/transparentWhite"
                android:textSize="@dimen/normal_text_size"
                android:textCursorDrawable="@drawable/mycursor"/>

        </LinearLayout>

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forget_password"
            android:textColor="@drawable/text_press"
            android:textSize="@dimen/small_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_space"
            android:layout_marginTop="@dimen/normal_space"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_space"
                android:layout_weight="1"
                android:background="@drawable/mybutton_press4"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="@dimen/small_space"
                android:text="@string/register"
                android:textColor="@color/titlebar"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                android:id="@+id/signup" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_space"
                android:layout_weight="1"
                android:background="@drawable/mybutton_press2"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="@dimen/small_space"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                android:id="@+id/login"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
