<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <include layout="@layout/header">
        <!-- 左侧按钮为返回， 中间内容为 “个人信息” 右侧按钮为 编辑-->
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="@dimen/text_size_medium"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="职业"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical|right"
            android:text="@string/occupation"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="学历"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginLeft="16dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical|right"
            android:text="@string/education"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_custom"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_height_custom"
            android:text="所在地"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginLeft="16dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_custom"
            android:gravity="center_vertical|right"
            android:text="@string/location"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#030303"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_custom"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_height_custom"
            android:text="联系方式"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginLeft="16dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_custom"
            android:gravity="center_vertical|right"
            android:text="@string/phone_number"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_height_custom"
            android:text="个人介绍"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="4"
            android:text="@string/personal_introduction"
            android:textSize="@dimen/text_size_small"
            android:textColor="#000000"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_height_custom"
            android:text="个人评分:"
            android:textSize="@dimen/text_size_medium"
            android:textColor="#000000"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="4.5"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>

</LinearLayout>
    </ScrollView>