<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/cancel"
            android:text="取消"
            android:textSize="@dimen/text_size_large"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:background="#0792e8"
            android:laalignParentLeft="true"

            android:textIsSelectable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="编辑个人信息"
            style="@style/titlebar"
           android:layout_toRightOf="@+id/cancel"
            android:layout_toLeftOf="@+id/save"

            android:textSize="@dimen/text_size_large" />
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/save"
            android:text="保存"
            android:textSize="@dimen/text_size_large"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:background="#0792e8"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="修改头像"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_medium"
            android:paddingLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"/>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:src="@drawable/portrait"
            android:scaleType="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="职业"
            android:textSize="@dimen/text_size_medium"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            />

        <EditText
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/occupation"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="学历"
            android:textSize="@dimen/text_size_medium"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/education"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="所在地"
            android:textSize="@dimen/text_size_medium"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/location"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="联系方式"
            android:textSize="@dimen/text_size_medium"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/phone_number"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="个人介绍"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:lines="4"
            android:text="@string/personal_introduction"
            android:textSize="@dimen/text_size_small"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>


</LinearLayout>

</ScrollView>